[package]
name = "minilog"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "*"
clap = "^2.27.0"
anyhow = "*"
arrayvec = "*"
zstd = "*"

[dev-dependencies]
criterion = "0.3"
rand = {version="*", features=["small_rng"]}

[profile.release]
debug = true
lto = true

[[bench]]
name = "lib"
harness = false
