[package]
name = "minilog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0.4"
clap = "^2.27"
anyhow = "^1.0"
arrayvec = "^0.7"
zstd = "^0.12"
nohash-hasher = "^0.2"

[dev-dependencies]
criterion = "0.3"
rand = {version="*", features=["small_rng"]}

[profile.release]
debug = true
lto = true

[[bench]]
name = "lib"
harness = false
